# fast-resume

./: .gitignore  README.md  logging.conf  main.py  pyproject.toml
resumes/samples/: robertson.yaml  xss_test.json  zeng.json  zeng.yaml  zeng_jsonresume.json
src/: constants.py  resume.py  resume_element.py  resume_section.py  utils.py
static/: altzeng.css  altzeng5.css  base_resume.css  classic.css  light.css  robertson.css  sober.css  zeng.css
static/old/: altzeng4.css  altzeng6.css  altzeng6wide.css  cool.css  sober_white.css
templates/: altzeng4.html  altzeng5.html  altzeng6wide.html  base_resume.html  classic.html  cool.html  light_en.html  robertson.html  sober.html  sober_white.html  zeng.html
templates/old/: altzeng.html  altzeng2.html  altzeng3.html  altzeng6.html  light.html  zeng.html
